Added index.html and index.css files

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Que pro fino señores</title>
+</head>
+<body>
+    <h1 id="que-pro-title">Que pro</h1>
+    <h2 id="fino-señores-subtitle">fino señores</h2>
+</body>
+</html>
