--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 
      <!-- Secciones debajo del Banner Home -->
 <section class="mdl-seccioneshome mdl-grid mdl-grid--no-spacing" id="features">
+    <p>Zapateiro Andrés</p>
     <div class="mdl-grid">
        <!-- Sección 1 -->
        <div class="mdl-cell mdl-cell--4-col">
@@ -86,11 +87,11 @@
        <div class="mdl-cell mdl-cell--4-col">
           <div class="mdl-seccion-home3 mdl-card mdl-shadow--2dp">
              <div class="mdl-card__title">
-                <h2 class="mdl-card__title-text">Sección 3</h2>
+                <h2 class="mdl-card__title-text">Tienda adaptada a la normativa PMR</h2>
              </div>
              <div class="mdl-card__supporting-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Mauris sagittis pellentesque lacus eleifend lacinia...
+                Nuestra tienda está adaptada para cumplir con la normativa, y así poder ayudar, de las Personas con Movilidad Reducida. Para ello, hemos instalado una rampa para estas personas.
+		Si debido al exceso de obesidad una rampa no fuese suficiente, también contamos con un ascensor. 
              </div>
           </div>
        </div>
