--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
      <!-- Secciones debajo del Banner Home -->
 <section class="mdl-seccioneshome mdl-grid mdl-grid--no-spacing" id="features">
-    <p>Zapateiro Andrés</p>
+    <h1>Zapateiro Andrés</h1>
     <div class="mdl-grid">
        <!-- Sección 1 -->
        <div class="mdl-cell mdl-cell--4-col">
@@ -87,8 +87,8 @@
                 <h2 class="mdl-card__title-text">Tienda adaptada a la normativa PMR</h2>
              </div>
              <div class="mdl-card__supporting-text">
-                Nuestra tienda está adaptada para cumplir con la normativa, y así poder ayudar, de las Personas con Movilidad Reducida. Para ello, hemos instalado una rampa para estas personas.
-		Si debido al exceso de obesidad una rampa no fuese suficiente, también contamos con un ascensor. 
+                Nuestra tienda está adaptada para cumplir con la normativa, y así poder ayudar, de las Personas con Movilidad Reducida.
+		     Para ello, hemos instalado un ascensor para PMR y señoritas Puff.
              </div>
           </div>
        </div>
@@ -96,24 +96,21 @@
  </section>
 
 
-
- <!-- Boletín (Newsletter) -->
-<section class="mdl-seccioneshome mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
-    <div class="mdl-grid">
-       <div class="mdl-cell mdl-cell--12-col">
-          <form action="#">
-             <p class="mld-txt-boletin">Suscríbete a nuestro boletín de Novedades:</p>
-             <div class="mdl-textfield mdl-js-textfield mdl-contenedor-input-boletin">                  
-                <input class="mdl-textfield__input" type="email" id="email" required>
-                <label class="mdl-textfield__label" for="sample1">micorreo@mail.com</label>
-             </div>
-             <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-             Suscribirme
-             </button>
-          </form>
-       </div>
-    </div>
- </section>
+	
+	<!-- Boletín (Newsletter) -->
+	<section class="mdl-seccioneshome mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+		<div class="mdl-grid">
+			<div class="mdl-cell mdl-cell--12-col">
+				<form action="#">
+					<div class="mdl-textfield mdl-js-textfield">
+						<input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="sample2">
+						<label class="mdl-textfield__label" for="sample2">Email</label>
+			  			<span class="mdl-textfield__error">No es un email!</span>
+					</div>
+				</form>
+			</div>
+		</div>
+	</section>
 
  <!-- Footer -->
 <footer class="mdl-mega-footer">
@@ -162,7 +159,7 @@
     <div class="mdl-mega-footer--bottom-section">
        <div class="mdl-logo">
           <p class="mdl-copyright">
-             Mi Proyecto © <script>document.write(new Date().getFullYear())</script>. Desarrollado por <a href="http://nubecolectiva.com/" target="_blank"> Nube Colectiva </a>. Todos los Derechos Reservados. 
+             Zapateiro Andrés © <script>document.write(new Date().getFullYear())</script>. Desarrollado y patrocinado por David García Díaz. Todos los Derechos Reservados. 
           </p>
        </div>
     </div>
