--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
 		<div class="mdl-grid">
 			<div class="mdl-cell mdl-cell--12-col">
 				<form action="#">
-					<div class="mdl-textfield mdl-js-textfield">
-						<input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="sample2">
+					<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+						<input class="mdl-textfield__input" type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" id="sample2">
 						<label class="mdl-textfield__label" for="sample2">Email</label>
-			  			<span class="mdl-textfield__error">No es un email!</span>
+			  			<span class="mdl-textfield__error">El email introducido no es correcto.</span>
 					</div>
 				</form>
 			</div>
