--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
 						<label class="mdl-textfield__label" for="sample2">Email</label>
 			  			<span class="mdl-textfield__error">El email introducido no es correcto.</span>
 					</div>
+					<!-- Colored raised button -->
+					<button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">Suscribirse</button>
+
 				</form>
 			</div>
 		</div>
