--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <!-- Connect with Material Design-->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+	<head>
+		<!-- Connect with Material Design-->
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+		<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+		<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
 
-    <link rel="stylesheet" href="index.css"> 
+    		<link rel="stylesheet" href="index.css"> 
 
-    <!-- Define page parameters-->
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Que pro fino señores</title>
-</head>
-<body>
-    <!--- Header -->
-    <header class="mdl-layout__header mdl-layout__header--scroll mdl-color--primary">
-        <div class="mdl-layout--large-screen-only mdl-layout__header-row">
-        </div>
-        <div class="mdl-layout--large-screen-only mdl-layout__header-row">
-           <h3>Que pro fino señores</h3>
-        </div>
-        <div class="mdl-layout--large-screen-only mdl-layout__header-row">
-        </div>
-        <div>
-           <a href="#banner-home" class="mdl-layout__tab is-active">Inicio</a>
-           <a href="#features" class="mdl-layout__tab">Zapateiro Andrés</a>
-           <a href="#galicia" class="mdl-layout__tab">Galicia calidade</a>
-           <a href="#contact" class="mdl-layout__tab">Contacto</a>
-        </div>
-     </header>
+		<!-- Define page parameters-->
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Que pro fino señores</title>
+	</head>
+	<body>
+		<!--- Header -->
+		<header class="mdl-layout__header mdl-layout__header--scroll mdl-color--primary">
+			<div class="mdl-layout--large-screen-only mdl-layout__header-row">
+			   <h3>Que pro fino señores</h3>
+			</div>
+			<div>
+			   <a href="#banner-home" class="mdl-layout__tab is-active">Inicio</a>
+			   <a href="#features" class="mdl-layout__tab">Zapateiro Andrés</a>
+			   <a href="#galicia" class="mdl-layout__tab">Galicia calidade</a>
+			   <a href="#contact" class="mdl-layout__tab">Contacto</a>
+			</div>
+		</header>
      
 
 	
