--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title style="text-align: center">Que pro fino señores</title>
+		<title>Que pro fino señores</title>
 	</head>
 	<body>
 		<!--- Header -->
@@ -53,7 +53,7 @@
 
      <!-- Secciones debajo del Banner Home -->
 <section class="mdl-seccioneshome mdl-grid mdl-grid--no-spacing" id="features">
-    <h1>Zapateiro Andrés</h1>
+    <h1 style="text-align: center;">Zapateiro Andrés</h1>
     <div class="mdl-grid">
        <!-- Sección 1 -->
        <div class="mdl-cell mdl-cell--4-col">
