Added new section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
      <!-- Secciones debajo del Banner Home -->
 <section class="mdl-seccioneshome mdl-grid mdl-grid--no-spacing" id="features">
-    <h1 style="text-align: center;">Zapateiro Andrés</h1>
+    <h2 style="text-align: center; width: 100%;">Zapateiro Andrés</h1>
     <div class="mdl-grid">
        <!-- Sección 1 -->
        <div class="mdl-cell mdl-cell--4-col">
@@ -73,7 +73,7 @@
                 <h2 class="mdl-card__title-text">Zapatos</h2>
              </div>
              <div class="mdl-card__supporting-text">
-                Arreglamos zapatos de todo tipo, si son del chatarrero mejor (lavadoras, lavavajillas, todo tipo de metales).
+                Arreglamos zapatos de todo tipo, y chatarra.
              </div>
           </div>
        </div>
@@ -85,7 +85,7 @@
              </div>
              <div class="mdl-card__supporting-text">
                 Nuestra tienda está adaptada para cumplir con la normativa, y así poder ayudar, de las Personas con Movilidad Reducida.
-		     Para ello, hemos instalado un ascensor para PMR y señoritas Puff.
+		     Para ello, hemos instalado un ascensor para PMR.
              </div>
           </div>
        </div>
@@ -93,9 +93,52 @@
  </section>
 
 
+
+
+
+ <section class="mdl-seccioneshome mdl-grid mdl-grid--no-spacing" id="galicia">
+   <h2 style="text-align: center; width: 100%;">Galicia Calidade</h1>
+   <div class="mdl-grid">
+      <!-- Sección 1 -->
+      <div class="mdl-cell mdl-cell--4-col">
+         <div class="mdl-seccion-home1 mdl-card mdl-shadow--2dp">
+            <div class="mdl-card__title">
+               <h2 class="mdl-card__title-text">Que pro, que pro, que pro...</h2>
+            </div>
+            <div class="mdl-card__supporting-text">
+               Consulta nuestro Facebook, todo 100% actualizado. Que pro, que pro, que pro...
+            </div>
+         </div>
+      </div>
+      <!-- Sección 2 -->
+      <div class="mdl-cell mdl-cell--4-col">
+         <div class="mdl-seccion-home2 mdl-card mdl-shadow--2dp">
+            <div class="mdl-card__title">
+               <h2 class="mdl-card__title-text">Calidade zapateiro Andrés</h2>
+            </div>
+            <div class="mdl-card__supporting-text">
+               Con 30 años de experiencia, usando el mismo hilo... Todo como sempre se fixo.
+            </div>
+         </div>
+      </div>
+      <!-- Sección 3 -->
+      <div class="mdl-cell mdl-cell--4-col">
+         <div class="mdl-seccion-home3 mdl-card mdl-shadow--2dp">
+            <div class="mdl-card__title">
+               <h2 class="mdl-card__title-text">Zapateiro Andrés</h2>
+            </div>
+            <div class="mdl-card__supporting-text">
+               Que pro, que pro, que pro...
+            </div>
+         </div>
+      </div>
+   </div>
+</section>
+
+
 	
 	<!-- Boletín (Newsletter) -->
-	<section class="mdl-seccioneshome mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+	<section class="mdl-seccioneshome mdl-grid mdl-grid--no-spacing mdl-shadow--2dp" id="contact">
 		<div class="mdl-grid">
 			<div class="mdl-cell mdl-cell--12-col">
 				<form action="#">
